--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,19 @@
 name: Test our Secret Value
-	
-on: [workflow_dispatch] 
-	
+
+on: [workflow_dispatch]
+
 env:
-	## Sets environment variable
-	{% raw %}
-	MEANING_OF_LIFE: ${{secrets.MEANING_OF_LIFE}}    
-	{% endraw %}
+  # Sets environment variable
+  MEANING_OF_LIFE: ${{ secrets.MEANING_OF_LIFE }}
+
 jobs:
-	check:
-	  runs-on: ubuntu-latest
-	  steps:
-	    - uses: actions/checkout@v2
-	    - name: Install Dependencies
-	      run: npm i  
-	    - name: Run test script
-	      run: npm run test
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Dependencies
+        run: npm i
+
+      - name: Run test script
+        run: npm run test
